# Roota

./: .env.example  .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  skills-lock.json  tsconfig.json  vite.config.ts
app/: __init__.py
scripts/: download-model.ps1  start-llama.ps1
src/: App.tsx  i18n.ts  tauri-api.ts  theme.css  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/guidance/recipes/: chrome.json  explorer.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: instruction_step.txt  intent_classifier.txt  system_prompt.txt  task_brief.txt  task_planner.txt  unified_bootstrap.txt  vision_detect.txt  vision_task_planner.txt  windows_desktop_guide.txt  windows_desktop_hints.txt
src-tauri/src/: commands.rs  i18n.rs  lib.rs  main.rs  overlay.rs  prompts.rs  safety.rs  settings.rs
src-tauri/src/accessibility/: element.rs  mod.rs  scanner.rs  stub.rs  windows.rs
src-tauri/src/input/: mod.rs  monitor.rs
src-tauri/src/llm/: client.rs  llamacpp.rs  mod.rs  ollama.rs  resilient.rs  stub.rs
src-tauri/src/orchestration/: action_feedback.rs  bootstrap.rs  brief.rs  decision.rs  detector.rs  guidance_copy.rs  intent.rs  mod.rs  orchestrator.rs  plan.rs  planner.rs  recipes.rs  replan.rs  state.rs  templates.rs  vision_planner.rs
src-tauri/src/perception/: cache.rs  context.rs  desktop.rs  error.rs  frame.rs  fusion.rs  hybrid.rs  labels.rs  mod.rs  stub.rs  uia.rs  window_enum.rs  window_score.rs
src-tauri/src/perception/vision/: capture.rs  coords.rs  layered.rs  mod.rs  moondream.rs  ocr_windows.rs  preprocess.rs
src-tauri/src/shell/: explorer.rs  mod.rs  panel.rs
src-tauri/templates/: chrome.json  explorer.json  gmail.json  office.json
tests/: conftest.py  test_accessibility_stub.py  test_decision_engine.py  test_intent_recognizer.py  (+10 more)
(+81 files in other folders)
