[build-system]
requires = ["setuptools>=71.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "roota"
version = "0.1.0"
description = "Edge AI desktop assistant for senior citizens — on-device, offline, accessible."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
roota = "app.ui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
