[package]
name = "roota"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
description = "Edge AI desktop assistant for senior citizens — Tauri 2 + Rust + React"
license = "MIT"

[lib]
name = "roota_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.20"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
